syntax = "proto3";
package overlock.crossplane.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "overlock/crossplane/v1beta1/metadata.proto";

option go_package = "github.com/overlock-network/api/go/node/overlock/crossplane/v1beta1";

// Provider
message Provider {
  // metadata
  Metadata metadata = 1;

  // id
  uint64 id = 2;

  // creator
  string creator = 3;

  // ip
  string ip = 4;

  // port
  uint32 port = 5;

  // country code
  string country_code = 6;

  // environment type
  string environment_type = 7;

  // availability
  string availability = 8;

  // register time
  google.protobuf.Timestamp register_time = 9 [(gogoproto.stdtime) = true];
}
